# lerobot_ws

./: .gitignore  readme.md
src/: PLAN_五一假期规划.md  PROJECT_OVERVIEW.md
src/lerobot_controller/config/: so101_controllers.yaml
src/lerobot_controller/launch/: so101_controller.launch.py
src/lerobot_description/launch/: so101_gazebo.launch.py
src/lerobot_description/urdf/: so101.urdf.xacro  so101_base.xacro  so101_camera_in_hand.xacro  so101_gazebo.xacro  so101_ros2_control.xacro
src/lerobot_moveit/config/: kinematics.yaml
src/position_topic/: package.xml  setup.cfg  setup.py
src/position_topic/config/: pick_place_demo.yaml
src/position_topic/launch/: move_demo.launch.py  pick_place_demo.launch.py
src/position_topic/models/: camera.sdf  target_box.sdf
src/position_topic/position_topic/: pick_place_demo.py  position_publisher.py  position_subscriber.py
src/position_topic/worlds/: pick_place_attacher.world  pick_place_strawberry.world
