<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>position_topic</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="2453124@tongji.edu.cn">ljq</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>ament_index_python</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>action_msgs</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>gazebo_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>linkattacher_msgs</depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>ros2_linkattacher</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
